--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"assets/QuickLink/csdn.png":["assets/QuickLink/csdn.png"],"assets/QuickLink/jianshu.png":["assets/QuickLink/jianshu.png"],"assets/QuickLink/juejin.png":["assets/QuickLink/juejin.png"],"assets/QuickLink/wanandroid.png":["assets/QuickLink/wanandroid.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
